# weather-service

./: .env.example  .env.example.aws-localstack-full  .env.example.local  .gitignore  LICENSE  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
config/: logging.yml
deployment/: Dockerfile  README.md  build-docker.sh  docker-compose.localstack.redis.yml  docker-compose.yml  init-localstack.sh
src/: caching.py  main.py  settings.py  telemetry.py
src/data_store/: aws-s3.py  base.py  local.py
src/events/: aws-dynamodb.py  local.py
src/geo/: open_weather_geo_provider.py
src/logging/: logging.yml
src/weather/: dependencies.py  router.py  service.py  telemetry.py
src/weather/providers/: base.py  openweathermap.py
src/weather_service/: __init__.py  main.py
src/weather_service/api/: app.py  caching.py  dependencies.py  docs.py  models.py  rate_limiting.py  service.py  weather.py
src/weather_service/core/: exceptions.py  retry.py  settings.py
src/weather_service/core/data_store/: aws_s3.py  base.py  local.py
src/weather_service/core/events/: aws_dynamodb.py  base.py  local.py
src/weather_service/core/geo/: base.py  open_weather_geo_provider.py
src/weather_service/core/weather/: dependencies.py  service.py
src/weather_service/core/weather/providers/: __init__.py  base.py  open_weather.py  openweathermap.py
tests/: conftest.py  test_integration.py  test_retry.py
