[project]
name = "weather-service"
version = "0.1.0"
description = "Simple weather service"
authors = [
    { name = "Kostiantyn Povnych", email = "kostiantyn.povnych@gmail.com" },
]
dependencies = []
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/weather_service"]
